MD History: Convert synced device collapse icon to a button

This allows the button to be accessed by the keyboard, and adds a title
tooltip to the button. Also tweaks the styling of the existing buttons
in <history-item> extract common styles and introduce consistent touch
targets.

BUG=624735
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:closure_compilation

Review-Url: https://codereview.chromium.org/2203683002
Cr-Commit-Position: refs/heads/master@{#409741}

Former-commit-id: abdca5808398c3596308ed63dd5ddd2cdbf1382b